text-overflow fixed

--- a/src/components/Body/style.scss
+++ b/src/components/Body/style.scss
@@ -11,8 +11,3 @@
     }
   }
 }
-@media screen and (max-width: 720px) {
-  .main-body {
-    padding-top: 70px;
-  }
-}
