--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -17,7 +17,6 @@
   }
   .right {
     margin-right: 50px;
-    background-color: red;
     ul {
       display: flex;
       li {
